# hallucinator

./: .gitignore
hallucinator-rs/crates/hallucinator-bbl/src/: lib.rs
hallucinator-rs/crates/hallucinator-core/src/: authors.rs  backend.rs  cache.rs  checker.rs  lib.rs  orchestrator.rs  pool.rs  report.rs
hallucinator-rs/crates/hallucinator-core/src/db/: crossref.rs  mod.rs  openalex.rs
hallucinator-rs/crates/hallucinator-grobid/src/: lib.rs
hallucinator-rs/crates/hallucinator-parsing/src/: extractor.rs
hallucinator-rs/crates/hallucinator-pdf-mupdf/: Cargo.toml
hallucinator-rs/crates/hallucinator-pdf-mupdf/examples/: locate.rs
hallucinator-rs/crates/hallucinator-pdf-mupdf/src/: lib.rs
hallucinator-rs/crates/hallucinator-reporting/: Cargo.toml
hallucinator-rs/crates/hallucinator-reporting/src/: export.rs
test_data/: hallucinated_biblio.bib
web/: README.md
web/backend/: Cargo.toml
web/backend/src/: error.rs  jobs.rs  main.rs  state.rs  types.rs
web/backend/src/routes/: health.rs  mod.rs  pdf.rs  reference.rs
web/frontend/: package-lock.json  package.json
web/frontend/src/: App.css  App.tsx  PdfViewer.tsx  ReferenceCard.tsx  api.ts  types.ts
